syntax = "proto3";

option csharp_namespace = "AuthService.Grpc";

package login;

service LoginService {
  rpc Login(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  oneof response {
    LoginSuccess success = 1;
    LoginFailure failure = 2;
  }
}

message LoginSuccess {
  string access_token = 1;
  string refresh_token = 2;
  string Email = 3;
  string Username = 4;
}

message LoginFailure {
  int32 code = 1;
  string message = 2;
}